规划目录，支持less

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,10 @@
     "react",
     "es2015"
   ],
+  "plugins": [
+    "transform-runtime",
+    "transform-decorators-legacy"
+  ],
   "env": {
     "development": {
       "plugins": [
