--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "liuqing",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.6.2",
@@ -22,6 +23,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.3",
@@ -36,6 +38,7 @@
   },
   "dependencies": {
     "antd": "^2.13.10",
-    "babel-plugin-import": "^1.6.2"
+    "babel-plugin-import": "^1.6.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   }
 }
